meecast (0.3.30) unstable; urgency=low

  * Done psossibilti for Active/Disable Statusbar  
  * Updated Spanish translation
  * addded applet for Harmattan

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 29 Sep 2011 19:24:20 +0200

meecast (0.3.29) unstable; urgency=low

  * fixed problem with refresh button for Fremantle
  * fixed problem with wind_speed for value "N/A"
  * added translators to window About

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 21 Sep 2011 12:24:20 +0200

meecast (0.3.28) unstable; urgency=low

  * Updated Finish translation 
  * Adapted for new QTComponents
  * Fixed problem with periodically crashing 

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 20 Sep 2011 12:54:20 +0200

meecast (0.3.27) unstable; urgency=low

  * Adapted for Fremantle (N900)
  * Fixed wind speed units translation 
  * Fixed bug with night description
  * Changed copyright symbol in About window
  * Fixed Russian translation
  * changed icon for deb package

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Sep 2011 12:54:20 +0200

meecast (0.3.26) unstable; urgency=low

  * Updated Finish and Russian translation 
  * Improved in settings (added SectionScroller)

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 11 Sep 2011 13:04:20 +0200

meecast (0.3.25) unstable; urgency=low

  * Updated translation 

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 04 Sep 2011 23:04:20 +0200

meecast (0.3.24) unstable; urgency=low

  * began support MeeGo 1.2.0.90 on Tablet UX
  * began support Harmattan 

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 05 Aug 2011 20:44:20 +0200
