@@ -1,1 +1,1 @@
-meecast-applet-enable_0.1_i386.deb user/desktop optional
+meecast-applet-enable_0.1_armel.deb user/desktop optional
