@@ -1,8 +1,10 @@
 meecast (0.3.30) unstable; urgency=low
 
-  * Done psossibilti for Active/Disable Statusbar  
+  * Added possibility to Active / Disable  Statusbar using settings
   * Updated Spanish translation
-  * addded applet for Harmattan
+  * Added applet for Harmattan
+  * Added possibilty to show weather forecast in web browser after
+    tapping on picture of source weather forecast
 
  -- Vlad Vasiliev <vlad@gas.by>  Fri, 29 Sep 2011 19:24:20 +0200
 
